fix: Improve contrast and appearance of search results. (#443)

--- a/gnome-shell/src/gnome-shell-sass/widgets/_search-results.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_search-results.scss
@@ -22,11 +22,11 @@
 
 // content
 .search-section-content {
-  background-color: rgba($osd_bg_color, 0.1);
+  background-color: rgba($osd_bg_color, 0.2);
   border-radius: $modal_radius+3;
   border: 1px solid $osd_outer_borders_color;
   box-shadow: 0 2px 4px 0 $shadow_color;
-  text-shadow: 0 1px if($variant == 'light', rgba(255,255,255,0.2), rgba(0,0,0,0.2));
+  //text-shadow: 0 1px if($variant == 'light', rgba(255,255,255,0.2), rgba(0,0,0,0.2));
   color: $osd_fg_color;
   padding: $base_padding * 3;
   // This is the space between the provider icon and the results container
@@ -39,13 +39,17 @@
   &:focus,
   &:hover,
   &:selected {
-    background-color: transparentize($osd_fg_color, .9);
+    background-color: rgba(white, 0.6);
+    color: rgba($selected_fg_color, 0.8);
     transition-duration: 200ms;
+    text-shadow: none;
   }
 
   &:active,
   &:checked {
-    background-color: transparentize(darken($osd_bg_color, 10%), .1);
+    background-color: rgba(white, 0.6);
+    color: rgba($selected_fg_color, 0.8);
+    text-shadow: none;
   }
 }
 
@@ -71,7 +75,7 @@
     .list-search-provider-details {
       width: 120px;
       margin-top: 0;
-      color: darken($osd_fg_color, 8%);
+      color: rgba($osd_fg_color, 0.7);
       // font-weight: bold;
     }
   }
@@ -99,6 +103,16 @@
 
   // list item description
   .list-search-result-description {
-    color: darken($osd_fg_color, 30%);
+    color: rgba($osd_fg_color, 0.6);
+  }
+
+  &:focus,
+  &:hover,
+  &:selected,
+  &:active,
+  &:checked {
+    .list-search-result-description {
+      color: rgba($selected_fg_color, 0.5);
+    }
   }
 }
